[package]
name = "ez-pixmap"
version = "0.2.2"
authors = ["Mohammed Alyousef <mohammed.alyousef@neurosrg.com>"]
edition = "2018"
description = "A naive and easy inline pixmap (xpm-like) image decoder"
repository = "https://github.com/MoAlyousef/ez-pixmap"
documentation = "https://docs.rs/ez-pixmap"
keywords = ["image", "format", "pixmap", "xpm", "decoder"]
categories = ["multimedia::images", "multimedia::encoding"]
readme = "README.md"
license = "MIT"

[dependencies]
color-maps = "0.1"

[dev-dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
minifb = "0.19"
fltk = { version = "1", features = ["fltk-bundled"] }
ufb = "0.1.2"